--- a/frontend/part 2/pages/addform.html
+++ b/frontend/part 2/pages/addform.html
@@ -90,17 +90,17 @@
         <div class="Color">
             <span>Color:</span>
             <div class="colors-2">
-                <div class="barier-1">
+                <div class="barier">
                     <div class="color-1"></div>
                 </div>
-                <div class="barier-2">
-                    <div class="color-2"></div>
+                <div class="barier">
+                    <div class="color-1"></div>
                 </div>
-                <div class="barier-3">
-                    <div class="color-3"></div>
+                <div class="barier">
+                    <div class="color-1"></div>
                 </div>
-                <div class="barier-4">
-                    <div class="color-4"></div>
+                <div class="barier">
+                    <div class="color-1"></div>
                 </div>
             </div>
             
@@ -130,6 +130,6 @@
     </div>
   </div>
     
-
+  <script src="../scripts/addform.js"></script>
 </body>
 </html>
