--- a/frontend/part 1/pages/adress.html
+++ b/frontend/part 1/pages/adress.html
@@ -15,10 +15,17 @@
         <input type="text" class="name-card" placeholder="Name on card">
         </div>
         <div class="info-card">
-            <input type="month" class="name-card" placeholder="Name on card">
-            <input type="date" id="year" name="year" onchange="getYear()" />
-            <input type="number" class="number-card" placeholder="Card number">
+            <div class="MM">
+             <span>MM</span>
+             <i class="fas fa-chevron-down"></i>
+            </div>
+            <div class="YY">
+            <span>YY</span>
+            <i class="fas fa-chevron-down"></i>
+            </div>
+            <input type="number" class="CVV" placeholder="CVV">
         </div>
+        <button class="card-saver">Save</button>
     </div>
     <script>
         function getYear() {
