fixed the commit

--- a/frontend/part 1/pages/checkout.html
+++ b/frontend/part 1/pages/checkout.html
@@ -142,66 +142,7 @@
         </div>
        </div>
        <div class="scrollable">
-       <div class="product">
-        <div class="img">
-            <img src="../../assets/images/iphone16.jfif" alt="iphone">
-        </div>
-        <div class="info-device">
-        <h2>IPhone 16 pro max</h2>
-        <h6>Apple</h6>
-        <p>1000$</p>
-        </div>
-        <div class="quan">
-        <div class="quantity">
-         <button class="minus">-</button>
-         <p class="sum">1</p>
-         <button class="add">+</button>
-        </div>
-        <div class="delete">
-            <i class="fa-solid fa-trash"></i>
-        </div>
-    </div>
-       </div>
-       <div class="product">
-        <div class="img">
-            <img src="../../assets/images/iphone16.jfif" alt="iphone">
-        </div>
-        <div class="info-device">
-        <h2>IPhone 16 pro max</h2>
-        <h6>Apple</h6>
-        <p>1000$</p>
-        </div>
-        <div class="quan">
-        <div class="quantity">
-         <button class="minus">-</button>
-         <p class="sum">1</p>
-         <button class="add">+</button>
-        </div>
-        <div class="delete">
-            <i class="fa-solid fa-trash"></i>
-        </div>
-    </div>
-       </div>
-       <div class="product">
-        <div class="img">
-            <img src="../../assets/images/iphone16.jfif" alt="iphone">
-        </div>
-        <div class="info-device">
-        <h2>IPhone 16 pro max</h2>
-        <h6>Apple</h6>
-        <p>1000$</p>
-        </div>
-        <div class="quan">
-        <div class="quantity">
-         <button class="minus">-</button>
-         <p class="sum">1</p>
-         <button class="add">+</button>
-        </div>
-        <div class="delete">
-            <i class="fa-solid fa-trash"></i>
-        </div>
-    </div>
-       </div>
+       
        </div>
         </div>
         <div class="right">
@@ -216,12 +157,12 @@
         </div>
         <div class="shipping-fee">
             <h3>Shipping fee</h3>
-            <span id="shipping-fee">3,524.75 DA</span>
+            <span id="shipping-fee">3524.75$</span>
         </div>
         <div class="line"></div>
         <div class="total">
             <h3>Total</h3>
-            <span id="total">70,933.24</span>
+            <span id="totalprice">70,933.24</span>
 
         </div>
         <button id="place-order">place order</button>
