--- a/frontend/part 1/pages/index.html
+++ b/frontend/part 1/pages/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>ALSHOPDZ</title>
 </head>
 <body>
@@ -18,22 +18,7 @@
             </div>
 
             <div class="carted-products-col">
-                <div class="cart-item">
-                    <img src="../../assets/images/Apple-iPhone-16-Pro-hero-geo-240909_inline.jpg.large.jpg" alt="Samsung Galaxy S25 Ultra" class="cart-image">
-                    <div class="cart-item-details">
-                        <label class="cart-item-name">Samsung Galaxy S25 Ultra</label>
-                        <label class="cart-item-quant">$1,099.00 * 3</label>
-                        <label class="cart-item-total">$3,297.00</label>
-                    </div>
-                </div>
-                <div class="cart-item">
-                    <img src="../../assets/images/Apple-iPhone-16-Pro-hero-geo-240909_inline.jpg.large.jpg" alt="Samsung Galaxy S25 Ultra" class="cart-image">
-                    <div class="cart-item-details">
-                        <label class="cart-item-name">Samsung Galaxy S25 Ultra</label>
-                        <label class="cart-item-quant">$1,099.00 * 3</label>
-                        <label class="cart-item-total">$3,297.00</label>
-                    </div>
-                </div>
+                
             </div>
         </div>
 
