linked some pages with the backend

--- a/frontend/part 1/pages/checkout.html
+++ b/frontend/part 1/pages/checkout.html
@@ -76,7 +76,7 @@
           </div>
     </div>
     <div class="contact-info">
-        <h3>Country/region</h3>
+        <h3>Contact information</h3>
         <div class="name-phone">
         <input type="text" class="name" placeholder="Enter your name">
         <input type="text" class="phone-number" placeholder="Phone number">
