--- a/frontend/part 1/pages/product_details.html
+++ b/frontend/part 1/pages/product_details.html
@@ -20,22 +20,7 @@
             </div>
 
             <div class="carted-products-col">
-                <div class="cart-item">
-                    <img src="../../assets/images/Apple-iPhone-16-Pro-hero-geo-240909_inline.jpg.large.jpg" alt="Samsung Galaxy S25 Ultra" class="cart-image">
-                    <div class="cart-item-details">
-                        <label class="cart-item-name">Samsung Galaxy S25 Ultra</label>
-                        <label class="cart-item-quant">$1,099.00 * 3</label>
-                        <label class="cart-item-total">$3,297.00</label>
-                    </div>
-                </div>
-                <div class="cart-item">
-                    <img src="../../assets/images/Apple-iPhone-16-Pro-hero-geo-240909_inline.jpg.large.jpg" alt="Samsung Galaxy S25 Ultra" class="cart-image">
-                    <div class="cart-item-details">
-                        <label class="cart-item-name">Samsung Galaxy S25 Ultra</label>
-                        <label class="cart-item-quant">$1,099.00 * 3</label>
-                        <label class="cart-item-total">$3,297.00</label>
-                    </div>
-                </div>
+                
             </div>
         </div>
 
@@ -44,10 +29,12 @@
                 <p>Total</p>
                 <p class="price">$3,297.00</p>
             </div>
-            <button class="checkout-btn">Checkout <i class="fa-solid fa-arrow-right"></i></button>
+            <button class="checkout-btn" onclick="smoothNavigate('checkout.html')">
+                Checkout <i class="fa-solid fa-arrow-right"></i>
+              </button>
+              
         </div>
     </div>
-
     <!--main stuff goes under:-->
     <!--BUT i have something which is : dividers-->
 
