added address handling

--- a/frontend/part 1/pages/checkout.html
+++ b/frontend/part 1/pages/checkout.html
@@ -114,6 +114,7 @@
         <p class="addd">
            Shipping adress 
         </p>
+        <div class="address-text"></div>
         <button class="add2"><span>+ Add new adress</span></button>
        </div>
 
