--- a/frontend/part 2/pages/addform.html
+++ b/frontend/part 2/pages/addform.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="Main">
-    <h2>Product</h2>
+    <h2>Add Product</h2>
     <div class="components">
         <div class="ID">
             <span>Product ID</span>
