i added login and place order

--- a/frontend/part 1/pages/Signup.html
+++ b/frontend/part 1/pages/Signup.html
@@ -36,9 +36,10 @@
             <p>Confirm Password</p>
             <input type="password" class="Password-conf" placeholder="Password">
           </div>
-              <button>Sign in</button>
+              <button class="Sign-in">Sign in</button>
               <a href="">Forgot password?</a>
         </div>
     </div>
+    <script src="../scripts/Signup.js"></script>
 </body>
 </html>
