--- a/frontend/part 1/pages/login.html
+++ b/frontend/part 1/pages/login.html
@@ -28,9 +28,10 @@
             <p>Password</p>
             <input type="password" class="Password" placeholder="Password">
           </div>
-              <button>Sign in</button>
+              <button class="Sign-in">Sign in</button>
               <a href="">Forgot password?</a>
         </div>
     </div>
+    <script src="../scripts/login.js"></script>
 </body>
 </html>
