finished orders front and back, made dashboard stats linked with backend , made page routing in admin

--- a/frontend/part 2/pages/dashboard.html
+++ b/frontend/part 2/pages/dashboard.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Dashboard</title>
+    <title>Admin - Dashboard</title>
     <link rel="stylesheet" href="../styles/dashboard.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -23,10 +23,10 @@
         <!-- NAVIGATION BAR -->
     
         <div class="nav-bar">
-            <div class="tab active">Dashboard</div>
-            <div class="tab">Products</div>
-            <div class="tab">Orders</div>
-            <div class="tab">Users</div>
+            <div class="tab active" onclick="window.location.href='dashboard.html'">Dashboard</div>
+            <div class="tab" onclick="window.location.href='products.html'">Products</div>
+            <div class="tab" onclick="window.location.href='orders.html'">Orders</div>
+            <div class="tab" onclick="window.location.href='users.html'">Users</div>
         </div>
         <hr class="divider">
 
@@ -37,7 +37,7 @@
                     <h2>Total Products</h2>
                     <i class="fa-solid fa-box-archive"></i>
                 </div>
-                <h3 class="products-count">50,365</h3>
+                <h3 class="products-count"></h3>
             </div>
 
             <div class="stat-card" id="active-orders">
@@ -45,7 +45,7 @@
                     <h2>All Orders</h2>
                     <i class="fa-solid fa-shopping-cart"></i>
                 </div>
-                <h3 class="orders-count">50,365</h3>
+                <h3 class="orders-count"></h3>
             </div>
 
             <div class="stat-card" id="active-users">
@@ -53,9 +53,8 @@
                     <h2>Active Users</h2>
                     <i class="fa-solid fa-users"></i>
                 </div>
-                <h3 class="users-count">50,365</h3>
+                <h3 class="users-count"></h3>
             </div>
-
         </div>
 
 
