--- a/frontend/part 2/pages/products.html
+++ b/frontend/part 2/pages/products.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Products</title>
+    <title>Admin - Products</title>
     <link rel="stylesheet" href="../styles/products.css">
     <link rel="stylesheet" href="../styles/addform.css">
 
@@ -28,10 +28,10 @@
         <!-- NAVIGATION BAR -->
     
         <div class="nav-bar">
-            <div class="tab active">Dashboard</div>
-            <div class="tab">Products</div>
-            <div class="tab">Orders</div>
-            <div class="tab">Users</div>
+            <div class="tab" onclick="window.location.href='dashboard.html'">Dashboard</div>
+            <div class="tab active" onclick="window.location.href='products.html'">Products</div>
+            <div class="tab" onclick="window.location.href='orders.html'">Orders</div>
+            <div class="tab" onclick="window.location.href='users.html'">Users</div>
         </div>
         <hr class="divider">
     </div>
