--- a/frontend/part 2/pages/users.html
+++ b/frontend/part 2/pages/users.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Dashboard</title>
+    <title>Admin - Users</title>
     <link rel="stylesheet" href="../styles/users.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -23,10 +23,10 @@
         <!-- NAVIGATION BAR -->
     
         <div class="nav-bar">
-            <div class="tab active">Dashboard</div>
-            <div class="tab">Products</div>
-            <div class="tab">Orders</div>
-            <div class="tab">Users</div>
+            <div class="tab" onclick="window.location.href='dashboard.html'">Dashboard</div>
+            <div class="tab" onclick="window.location.href='products.html'">Products</div>
+            <div class="tab" onclick="window.location.href='orders.html'">Orders</div>
+            <div class="tab active" onclick="window.location.href='users.html'">Users</div>
         </div>
         <hr class="divider">
     </div>
