--- a/frontend/part 2/pages/users.html
+++ b/frontend/part 2/pages/users.html
@@ -42,33 +42,6 @@
 
         <hr class="divider">
     </div>
-    <!--productssection-->
-    <!--
-    <div class="table-header">
-                <span>Order #</span>
-                <span>image</span>
-                <span>Description</span>
-                <span>Order Date</span>
-                <span>Status</span>
-                <span>Buyer</span>
-                <span>Total</span>
-            </div>
-            <hr class="divider">
-
-            LEAVE THIS THING AS IT IS DAM OR JUST DELETE IT
-
-            <div class="orders-list">
-                <div class="order-row">
-                    <span class="order-id">887746437</span>
-                    <img src="" alt="" class="order-img">
-                    <span class="order-desc">Your Description Here</span>
-                    <span class="order-date">Your Date Here</span>
-                    <label class="order-status">Status here</label>
-                    <span class="order-buyer">AkramZennad</span>
-                    <span class="order-total">1022$</span>
-                </div>
-            </div>
-    -->
 
     <div class="orders-box">   
         <h3>Users</h3>
@@ -84,46 +57,9 @@
                 <div class="grid-cell">Actions</div>
             </div>
             
-            <div class="grid-row">
-                <div class="grid-cell">#88777878</div>
-                <div class="grid-cell"><span>ZennadAkram</span></div>
-                <div class="grid-cell">zennadakram@gmail.com</div>
-                <div class="grid-cell">25 Mar 2025</div>
-                <div class="grid-cell"><span class="status-badge completed">Completed</span></div>
-                <div class="grid-cell"><span class="status-badge admin">Admin</span></div>
-                <div class="manage-btns-section">
-                    <button class="delete-product-btn"><i class="fa-solid fa-trash"></i></button>
-                    <button class="edit-product-btn"><i class="fa-solid fa-pen-to-square"></i></button>
-                </div>
-            </div>
-            <div class="grid-row">
-                <div class="grid-cell">#88777878</div>
-                <div class="grid-cell"><span>ZennadAkram</span></div>
-                <div class="grid-cell">zennadakram@gmail.com</div>
-                <div class="grid-cell">25 Mar 2025</div>
-                <div class="grid-cell"><span class="status-badge completed">Completed</span></div>
-                <div class="grid-cell"><span class="status-badge completed">Admin</span></div>
-                <div class="manage-btns-section">
-                    <button class="delete-product-btn"><i class="fa-solid fa-trash"></i></button>
-                    <button class="edit-product-btn"><i class="fa-solid fa-pen-to-square"></i></button>
-                </div>
-            </div>
-            <div class="grid-row">
-                <div class="grid-cell">#88777878</div>
-                <div class="grid-cell"><span>ZennadAkram</span></div>
-                <div class="grid-cell">zennadakram@gmail.com</div>
-                <div class="grid-cell">25 Mar 2025</div>
-                <div class="grid-cell"><span class="status-badge completed">Completed</span></div>
-                <div class="grid-cell"><span class="status-badge active">Client</span></div>
-                <div class="manage-btns-section">
-                    <button class="delete-product-btn"><i class="fa-solid fa-trash"></i></button>
-                    <button class="edit-product-btn"><i class="fa-solid fa-pen-to-square"></i></button>
-                </div>
-            </div>
-            
         </div>
     </div>
 
-    <script src="../scripts/orders.js"></script>
+    <script src="../scripts/users.js"></script>
 </body>
 </html>
