nothing big in addForm

--- a/frontend/part 2/pages/addform.html
+++ b/frontend/part 2/pages/addform.html
@@ -14,7 +14,6 @@
         <div class="ID">
             <span>Product ID</span>
             <input class="ID-input" type="text" placeholder="#ID">
-            
         </div>
         <div class="devider"></div>
         <div class="Name">
@@ -107,9 +106,9 @@
                 <div class="Quantity">
                     <span>Quantity</span>
                     <div class="qu1">
-                    <input type="number" placeholder="Quantity">
-                    <button class="save-var">Save Variation</button>
-                </div>
+                        <input type="number" placeholder="Quantity">
+                        <button class="save-prod" onclick="createProduct()">Add Product</button>
+                    </div>
                 </div>
                 <div class="devider"></div>
             
